# AndroidMath

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/hym/androidmath/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/hym/androidmath/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml  content_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: themes.xml
app/src/test/java/com/hym/androidmath/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
mathdisplay/: build.gradle.kts
mathdisplay/src/androidTest/java/com/agog/mathdisplay/: DrawInstrumentedTest.kt  FontInstrumentedTest.kt  TypesetterInstrumentedTest.kt  ViewInstrumentedTest.kt
mathdisplay/src/main/cpp/: CMakeLists.txt  com_pvporbit_freetype_FreeType.h  freetype_jni.cpp
mathdisplay/src/main/java/com/agog/mathdisplay/: MTFontManager.kt  MTMathView.kt
mathdisplay/src/main/java/com/agog/mathdisplay/parse/: MTMathAtom.kt  MTMathAtomFactory.kt  MTMathList.kt  MTMathListBuilder.kt  MTMathTable.kt  MTParseError.kt
mathdisplay/src/main/java/com/pvporbit/freetype/: Bitmap.kt  CharMap.kt  Face.java  Face.kt  FreeType.java  FreeType.kt  FreeTypeConstants.kt  GlyphMetrics.kt  GlyphSlot.kt  Kerning.kt  KerningMode.kt  Library.java  Library.kt  LibraryVersion.kt  MTFreeTypeMathTable.kt  NativeWrapper.kt  RenderMode.kt  Size.kt  SizeMetrics.kt  SizeRequest.kt  SizeRequestType.kt  Utils.kt  Vector.kt
mathdisplay/src/test/java/com/agog/mathdisplay/: BuilderUnitTest.kt
(+10 files in other folders)
